--- a/index.html
+++ b/index.html
@@ -13,6 +13,28 @@
 
 <body>
   <div class= "wrapper">
+    <!-- header content: Name and career -->
+    <header>
+      <div class="flex-container-1">
+        <div class="row">
+          <div class="column">
+            <h1>ANDREW NJUGUNA</h1>
+            <div class="column"></div>
+            <h3>FULL STACK WEB DEVELOPER NINJA</h3>
+          </div>
+        </div>
+      </div>
+
+
+      <!-- udacity logo -->
+      <div class="flex-container-2">
+        <div class="row">
+          <div class="column">
+            <img class="img-responsive" src="images/udacitylogocopy.png" alt="udacitylogo">
+          </div>
+        </div>
+      </div>
+    </header>
   </div>
 </body>
 
