add header horizontal tag

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <div class= "wrapper">
+  <div class="wrapper">
     <!-- header content: Name and career -->
     <header>
       <div class="flex-container-1">
@@ -35,6 +35,8 @@
         </div>
       </div>
     </header>
+
+    <hr class="solid">
   </div>
 </body>
 
