add main content: project images

--- a/index.html
+++ b/index.html
@@ -37,6 +37,43 @@
     </header>
 
     <hr class="solid">
+
+    <!-- main content -->
+    <main>
+      <div class="container-3">
+        <div class="row">
+          <div class="column">
+            <h2>Movie Website</h2>
+            <img class="img-responsive" src="images/FSNDmovieprojectcopy.png" alt="movie website">
+          </div>
+        </div>
+      </div>
+
+
+      <div class="flex-container-4">
+        <div class="row">
+          <div class="column">
+            <p>FEATURED WORK: Movie Website Code, Turtle Art, Turtle Art Code</p>
+          </div>
+        </div>
+      </div>
+
+      <br>
+      <hr class="solid">
+      <div class="flex-container-5">
+        <div class="row">
+          <div class="column-1">
+            <img class="img-responsive" src="images/FSNDmovieprojectcodecopy.png" alt="movie website code">
+          </div>
+          <div class="column-2">
+            <img class="img-responsive" src="images/turtleartcopy.png" alt="turtle art">
+          </div>
+          <div class="column-3">
+            <img class="img-responsive" src="images/turtleartcodecopy.png" alt="turtle art code">
+          </div>
+        </div>
+      </div>
+    </main>
   </div>
 </body>
 
